# routes/materials.js
@@ -7,6 +7,7 @@ const validateId = require('../middleware/validateId');
 const { isAuthenticated } = require('../middleware/authenticate');
 
 router.get('/', materialsController.getAll);
+router.get('/low-stock', materialsController.getLowStock);
 router.get('/:id', validateId, materialsController.getSingle);
 router.post('/', isAuthenticated, validation.saveMaterial, materialsController.createMaterial);
 router.put('/:id', isAuthenticated, validateId, validation.saveMaterial, materialsController.updateMaterial);
